--- a/layouts/partials/docs/inject/footer.html
+++ b/layouts/partials/docs/inject/footer.html
@@ -10,7 +10,7 @@
 <script src="https://utteranc.es/client.js"
         repo="tiennm99/twem"
         issue-term="pathname"
-        theme="preferred-color-scheme"
+        theme="light"
         crossorigin="anonymous"
         async>
 </script>
