--- a/layouts/partials/docs/inject/footer.html
+++ b/layouts/partials/docs/inject/footer.html
@@ -5,7 +5,7 @@
   </p>
   <p><b>Vui lòng ghi rõ nguồn khi đăng lại nội dung từ trang web này.</b>
   <p>
-  <p>Hãy tôn trọng công lao của tác giả. <i>Give respect, take respect.</i></p>
+  <p>Hãy tôn trọng công sức của người khác. <i>Give respect, take respect.</i></p>
 </div>
 <script src="https://utteranc.es/client.js"
         repo="tiennm99/twem"
