[Change] update links

--- a/layouts/partials/docs/inject/footer.html
+++ b/layouts/partials/docs/inject/footer.html
@@ -8,7 +8,7 @@
   <p>Hãy tôn trọng công sức của người khác. <i>Give respect, take respect.</i></p>
 </div>
 <script src="https://utteranc.es/client.js"
-        repo="tiennm99/twem"
+        repo="tienthieusac/twem"
         issue-term="pathname"
         theme="light"
         crossorigin="anonymous"
@@ -16,8 +16,8 @@
 </script>
 <div style="text-align: center">
   <p>
-    Made by <a href="https://github.com/tiennm99">miti99</a> with ❤️. Follow me on
+    Made by <a href="https://miti99.dev">miti99</a> with ❤️. Follow me on
     <a href="https://facebook.com/miti99">Facebook</a> |
-    <a href="https://github.com/tiennm99">GitHub</a>
+    <a href="https://github.com/tienthieusac">GitHub</a>
   </p>
 </div>
